# GameLib

./: .gitignore  CMakeLists.txt  LICENSE
Core/: Core.hpp
Core/AI/: AICore.cpp  AICore.hpp
Core/Actions/: Action.cpp  Action.hpp
Core/Actions/Combat/: AttackAction.cpp  AttackAction.hpp
Core/Actions/Contracts/: IAction.hpp
Core/Actions/Exceptions/: ActionException.hpp  DeadTargetAttackException.hpp
Core/Characters/: Character.cpp  Character.hpp  Player.cpp  Player.hpp
Core/Characters/NPC/: Monster.cpp  Monster.hpp
Core/Characters/Relations/: Relation.cpp  Relation.hpp
Core/Characters/Utiles/: Inventory.cpp  Inventory.hpp
Core/Exceptions/: Exception.hpp  Handler.cpp  Handler.hpp
Core/Objects/: Item.cpp  Item.hpp  Object.cpp  Object.hpp
Core/Objects/Weapons/: Sword.cpp  Sword.hpp
Tests/: CharacterTests.cpp
